@@ -1,5 +1,8 @@
 Release Notes
 
+* 11/10/2017
+  * Changed HS06sec formula to actualcorecount * corepower * duration
+
 * 11/8/2017
   * setting jobsetID in JEDI_Dataset_Contents
   * using separate site attribute for jobseed
